# weaviate-txtai

./: .gitignore  LICENSE  README.md  api.http  docker-compose.yml  makefile  pyproject.toml
.devcontainer/: devcontainer.env  devcontainer.json
examples/: 01_simple.ipynb
tests/: test_client.py
tests/ann/: test_weaviate.py
weaviate_txtai/: client.py
weaviate_txtai/ann/: weaviate.py
